Import of BLHOTSKY/Git-Code-Review-1.1 from CPAN.
gitpan-cpan-distribution: Git-Code-Review
gitpan-cpan-version:      1.1
gitpan-cpan-path:         BLHOTSKY/Git-Code-Review-1.1.tar.gz
gitpan-cpan-author:       BLHOTSKY
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -49,6 +49,9 @@ debug       = 0
 
 ; Prerequesites
 [AutoPrereqs]
+; Anything missed by AutoPrereqs
+[Prereqs]
+Git::Repository::Plugin::Log = 0
 [CheckPrereqsIndexed]       ; ensure prereqs are on CPAN
 [Prereqs / TestRequires]
 Pod::Coverage::TrustPod		= 0
